<resources>
    <string name="app_name">Camera App</string>
    <string name="take_photo">Take photo</string>
    <string name="market_delete_accept">Ushbu rasmni o\'chirishga ishonchingiz komilmi ?</string>
    <string name="yes">Ha</string>
    <string name="no">Yo\'q</string>
    <string name="path">Path</string>
    <string name="camera_settings">Camera settings</string>
    <string name="pictures">Pictures</string>
    <string name="text_watermark">Select the information to include in the watermark</string>
    <string name="style">Style</string>
    <string name="privacy">Privacy</string>
    <string name="about_camera">About Camera</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="permissions">Permissions</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="press_volume_key_to_capture">Press volume key to capture</string>
    <string name="watermark">Watermark</string>
    <string name="contact_us">Contact Us</string>
    <string name="_3_4">3:4</string>
    <string name="_9_16">9:16</string>
    <string name="_1_1">1:1</string>
    <string name="photo">PHOTO</string>
    <string name="video">VIDEO</string>
    <string name="other">Other</string>
</resources>