<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingVertical="16dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_delete_accept_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/market_delete_accept"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_accept_text" />

        <ImageView
            android:id="@+id/line_vertical"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/yes"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/line_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/no"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line_vertical"
            app:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>