<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white_light"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white_light"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center|start"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:src="@drawable/back"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/btn_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center|end"
                android:text="@string/camera_settings"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/temp_Pictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="start|center"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:text="@string/pictures"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/pictures_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                android:background="@drawable/bg_container"
                app:layout_constraintTop_toBottomOf="@id/temp_Pictures">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/temp_Pictures">

                    <TextView
                        android:id="@+id/eventText1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:background="?selectableItemBackground"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:text="@string/watermark"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/manageState1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:trackTint="@color/white"
                        android:thumbTint="@color/white"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="#D0D0D0"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/temp_Pictures">

                    <TextView
                        android:id="@+id/eventText2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/press_volume_key_to_capture"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/manageState2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:trackTint="@color/white"
                        android:thumbTint="@color/white"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>



            <TextView
                android:id="@+id/temp_Privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="start|center"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/pictures_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:text="@string/other"
                android:textColor="#797979"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/other_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_container"
                app:layout_constraintTop_toBottomOf="@id/temp_Privacy">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container3"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:background="?selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/temp_Pictures">

                    <TextView
                        android:id="@+id/eventText3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:background="?selectableItemBackground"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:text="@string/privacy_notice"
                        android:textColor="@color/white"
                        android:textSize="18sp" />



                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="#D0D0D0"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container5"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:background="?selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/temp_Pictures">

                    <TextView
                        android:id="@+id/eventText5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:background="?selectableItemBackground"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:text="@string/reset_settings"
                        android:textColor="@color/white"
                        android:textSize="18sp" />



                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="#D0D0D0"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container6"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="?selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/temp_Pictures">

                    <TextView
                        android:id="@+id/eventText6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:background="?selectableItemBackground"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/about_camera"
                        android:textColor="@color/white"
                        android:textSize="18sp" />



                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="#D0D0D0"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container7"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="?selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/temp_Pictures">

                    <TextView
                        android:id="@+id/eventText7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:background="?selectableItemBackground"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/white"
                        android:textSize="18sp" />



                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>